# pbtools

./: .gitignore  .travis.yml  MANIFEST.in  Makefile  README.rst  codecov.yml  setup.py
.github/workflows/: test.yml
benchmark/: Makefile  README.rst  common.mk
benchmark/flatbuffers/: Makefile  README.rst  benchmark.fbs  benchmark_generated.h  main.cpp
benchmark/google/: Makefile  README.rst  benchmark.pb.h
benchmark/nanopb/: Makefile  README.rst  benchmark.pb.h
benchmark/pbtools/: Makefile  benchmark.c  benchmark.h  main.c
benchmark/protobuf-c/: benchmark.pb-c.c
crate/: Cargo.toml  README.md  README.rst
crate/src/: lib.rs
docs/: Makefile  conf.py  index.rst  make.bat
examples/: Makefile
examples/address_book/: Makefile  README.rst  address_book.proto  addressbook.proto  main.c  main.py  main.rs
examples/benchmark/: .gitignore  README.rst  benchmark.proto  common.mk
examples/hello_world/: Makefile  main.c
examples/oneof/: Makefile  main.c  oneof.proto
examples/py_hello_world/: main.py  setup.py
examples/repeated/: Makefile  repeated.proto
lib/: CMakeLists.txt  Makefile
lib/include/: pbtools.h
lib/src/: pbtools.c
pbtools/: __init__.py  c_source.py  parser.py  version.py
pbtools/c_source/: __init__.py  pbtools.c  pbtools.h
pbtools/mys_source/: __init__.py
pbtools/python_source/: __init__.py  pbtools_py.h
pbtools/rust_source/: __init__.py
src/: pbtools.c  pbtools.h
tests/: Makefile  main.c  main_fuzzer.c  nala.c  nala.h  narwhal.c  narwhal.h  test_c_source.py  test_command_line.py  test_parser.py  test_pbtools.py
(+205 files in other folders)
