[package]
name = "pbtools"
version = "0.6.0"
authors = ["Erik Moqvist <erik.moqvist@gmail.com>"]
description = "Google Protocol Buffers"
license = "MIT"
repository = "https://github.com/eerimoq/pbtools"
keywords = ["protobuf", "proto", "proto3", "protocol-buffers"]
readme = "README.rst"

[dependencies]
