[package]
name = "pbtools"
version = "0.13.0"
authors = ["Erik Moqvist <erik.moqvist@gmail.com>"]
description = "Google Protocol Buffers encoding and decoding."
license = "MIT"
repository = "https://github.com/eerimoq/pbtools"
keywords = ["protobuf", "proto", "proto3", "protocol-buffers"]
readme = "README.md"
edition = "2018"

[dependencies]
num_enum = "0.5.1"